SFDCProject/src/objects/Task_Dependency__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>Child_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Child Task</label>
        <referenceTo>Task__c</referenceTo>
        <relationshipLabel>Task Dependencies (Child Task)</relationshipLabel>
        <relationshipName>Task_Dependencys2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Task</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Project_Name__c</field>
                <operation>equals</operation>
                <valueField>Task__c.Project_Name__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Task__c</referenceTo>
        <relationshipLabel>Task Dependencies (Parent Task)</relationshipLabel>
        <relationshipName>Task_Dependencies1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Name</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Task Dependencies</relationshipLabel>
        <relationshipName>Task_Dependencies_Project</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <label>Task</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Project_Name__c</field>
                <operation>equals</operation>
                <valueField>Task__c.Project_Name__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Task__c</referenceTo>
        <relationshipLabel>Task Dependencies</relationshipLabel>
        <relationshipName>Task_Dependencys</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Task Dependency</label>
    <nameField>
        <label>Custom Object Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Task Dependencies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>